# websocket_builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bench_backends.sh  bench_stress.sh  benchmark_results.txt  clippy.toml  codecov.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: backend_comparison.rs  simple_benchmark.rs  stress_test.rs  websocket_performance.rs
examples/: README.md  basic_demo.rs  chat_server.rs  debug_ws.rs  echo_server.rs  flexible_handler.rs  pipeline_demo.rs  simple_echo.rs
scripts/: setup-hooks.sh
src/: actor_websocket_handler.rs  axum.rs  connection.rs  handler.rs  lib.rs  message_converter.rs  message_handler.rs  middleware.rs  middleware_context.rs  split_actors.rs  unified.rs  websocket_builder.rs  websocket_handler.rs  websocket_trait.rs
tests/: actor_comparison_test.rs  actor_tests.rs  actor_websocket_handler_test.rs  error_handling_test.rs  integration_test.rs  middleware_test.rs  unit_tests.rs  utils.rs  websocket_builder_test.rs  websocket_handler_test.rs
