[package]
name = "websocket_builder"
version = "1.1.0-alpha.1"
edition = "2021"
authors = ["Daniel Cadenas <dcadenas@gmail.com>"]
description = "A simple WebSocket framework with per-connection handlers"
license = "MIT"
repository = "https://github.com/verse-pbc/websocket_builder"
documentation = "https://docs.rs/websocket_builder"
readme = "README.md"
keywords = ["websocket", "async", "axum", "handler"]
categories = ["network-programming", "web-programming", "asynchronous"]

[lib]
name = "websocket_builder"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.8", features = ["ws"] }
flume = "0.11"
futures-util = "0.3.31"
tokio = { version = "1.45", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
tokio-tungstenite = "0.24"
http = "1.1"


